Added register.jsp and login.jsp and their corresponding servlets. Basic CSS and inputs validations were added too.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,13 +4,16 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>uk.ac.brookes.mscprojectadmin.controllers.LoginServlet</servlet-class>
     </servlet>
-    <servlet-mapping>
+    <!-- <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping> -->
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>index</welcome-file>
+    </welcome-file-list>
 </web-app>
