--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,20 +8,20 @@
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>uk.ac.brookes.mscprojectadmin.controllers.RegisterServlet</servlet-class>
     </servlet>
-    <servlet-mapping>
+    <!-- <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/common/register</url-pattern>
-    </servlet-mapping>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping> -->
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/common/login.jsp</welcome-file>
+        <welcome-file>/common/index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
