--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,13 +8,21 @@
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>uk.ac.brookes.mscprojectadmin.controllers.RegisterServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DashboardServlet</servlet-name>
+        <servlet-class>uk.ac.brookes.mscprojectadmin.controllers.DashboardServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/common/register</url-pattern>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DashboardServlet</servlet-name>
+        <url-pattern>/dashboard</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
